[tool.poetry]
name = "spylls"
version = "0.1.5"
description = ""
authors = ["Victor Shepelev <zverok.offline@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pytest = "^5.3.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
